Refactor: update CORS configuration and security settings in SecurityConfig
- Restrict allowed origins by removing generic local and mobile hosts and adding `http://localhost:4000`.
- Tighten allowed headers by replacing the wildcard with specific `Authorization` and `Content-Type` headers.
- Remove the configuration for exposed headers.
- Replace `List.of` usage with `Arrays.asList` for origin, method, and header definitions.
- Adjust indentation and formatting within the `authorizeHttpRequests` block for improved readability.